syntax = "proto3";
package routing.pb;

message RoutingStateRecord {
    message AddressInfo {
        bytes multiaddr = 1;
    }

    bytes peer_id = 1;
    uint64 seq = 2;
    repeated AddressInfo addresses = 3;
}
